src/objects/Contest__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Entries__c</fullName>
        <label>Entries</label>
        <summaryForeignKey>Entry__c.Contest__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Planned_Drawing_Time__c</fullName>
        <label>Planned Drawing Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rules__c</fullName>
        <label>Rules</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Start_Accepting_Entries__c</fullName>
        <label>Start Accepting Entries</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stop_Accepting_Entries__c</fullName>
        <label>Stop Accepting Entries</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Prize_Value__c</fullName>
        <label>Total Prize Value</label>
        <summarizedField>Prize__c.Total_Value__c</summarizedField>
        <summaryForeignKey>Prize__c.Contest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Prizes__c</fullName>
        <label>Total Prizes</label>
        <summarizedField>Prize__c.Quantity__c</summarizedField>
        <summaryForeignKey>Prize__c.Contest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Contest</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>